compiler/test/fail_compilation/fail21740b.i
/*
TEST_OUTPUT:
---
fail_compilation/fail21740b.i(7): Error: undefined identifier `é`
---
*/
void *p = &\u00e9;
